tests/baselines/reference/nodeModulesTopLevelAwait(module=nodenext).errors.txt
tests/cases/conformance/node/subfolder/index.ts(2,11): error TS1478: Top-level 'await' expression is not allowed in CommonJS modules. Please convert to ES module.
tests/cases/conformance/node/subfolder/index.ts(4,5): error TS1477: Top-level 'for await' loop is not allowed in CommonJS modules. Please convert to ES module.


==== tests/cases/conformance/node/subfolder/index.ts (2 errors) ====
    // cjs format file
    const x = await 1;
              ~~~~~
!!! error TS1478: Top-level 'await' expression is not allowed in CommonJS modules. Please convert to ES module.
    export {x};
    for await (const y of []) {}
        ~~~~~
!!! error TS1477: Top-level 'for await' loop is not allowed in CommonJS modules. Please convert to ES module.
==== tests/cases/conformance/node/index.ts (0 errors) ====
    // esm format file
    const x = await 1;
    export {x};
    for await (const y of []) {}
==== tests/cases/conformance/node/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== tests/cases/conformance/node/subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }